--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <br>
     <a href="1st\index.html"> 1st Assignment</a>
     <br>
+
+    <a href="2nd/index.html"> 2nd Assignment </a>
 </body>
 </html>
